@@ -1,2 +1,1 @@
 FOO: bar
-
