@@ -2,4 +2,4 @@
 
 set -e
 
-$GREP_DCTRL -sDescription '' < 0001.in
+$GREP_DCTRL --ensure-dctrl -sDescription '' < 0001.in
