@@ -2,8 +2,13 @@ dctrl-tools (2.20) UNRELEASED; urgency=low
 
   * Improve the testsuite.
   * tester.sh: Do not output .differr if it wasn't constructed.
+  * grep-dctrl: Make a more modest fix for #525525 in adding an --ensure-dctrl
+    option that makes sure that the output (in the absence of the -n switch)
+    is in dctrl format.
+    - Later on we may want to make --ensure-dctrl the default.  In anticipation,
+      a --compat option has been added that countermands any --ensure-dctrl.
 
- -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 13 Nov 2011 19:33:00 +0200
+ -- Antti-Juhani Kaijanaho <ajk@debian.org>  Sun, 13 Nov 2011 20:24:48 +0200
 
 dctrl-tools (2.19) unstable; urgency=low
 
